--- a/utils/style.css
+++ b/utils/style.css
@@ -22,3 +22,15 @@ body{
     background-image: url(../images/bg-pseudo.png);
     border-radius: 30px;
 }
+#profil{
+    background-image: url(../images/bg-instagram.jpg);
+    background-size: cover;
+    display: block;
+    border: solid;
+    margin-top: 50px;
+}
+
+.border-myImage{
+    height: 200px;
+    width: 200px;
+}
