--- a/utils/style.css
+++ b/utils/style.css
@@ -3,21 +3,19 @@ body{
     background-color: #D13C98;
    
 }
-.myHead{
-    
-  
-   
-}
+
 .myPhotos{
     height: 600px;
 }
 
 .avatar {
     vertical-align: middle;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
   }
+  
+ 
 #bg-pseudo{
     height: 100%;
     width: 100%;
@@ -30,6 +28,10 @@ body{
     display: block;
     border: solid;
     margin-top: 50px;
+}
+.border-myImage{
+    height: 400px;
+    width: 400px;
 }
 .myPhotos {
     overflow-x: auto;
