--- a/utils/style.css
+++ b/utils/style.css
@@ -1,29 +1,69 @@
-
-
-body {
-    height: 100%;
-    width: auto;
+body{
     box-sizing: border-box;
     background-color: #D13C98;
-    font-family: 'Merriweather', serif;
+    height: 100%;
    
 
+   
 }
 
-.myPhotos {
+.myPhotos{
     height: 600px;
 }
 
-.avatar {
-    vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-#bg-pseudo {
+#bg-pseudo{
     height: 100%;
     width: 100%;
-    background-image: url(../bg-pseudo.png);
+    background-image: url(../images/bg-pseudo.png);
     border-radius: 30px;
 }
+#profil{
+    background-image: url(../images/bg-instagram.jpg);
+    background-size: cover;
+    display: block;
+    border: solid;
+    margin-top: 50px;
+}
+.border-myImage{
+    height: 400px;
+    width: 400px;
+}
+.myPhotos {
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.myPhotos .row {
+    margin: 0;
+    font-size: 0; /* Remove inline-block space */
+}
+
+.myPhotos .col-4 {
+    display: inline-block;
+    vertical-align: top;
+    white-space: normal;
+    font-size: 16px; /* Reset font size for content */
+}
+
+
+   
+
+#scroll_to_top {
+    position: fixed;
+    width: 25px;
+    height: 25px;
+    bottom: 50px;
+    right: 30px;
+  }
+  #scroll_to_top img {
+    width: 30px;
+  }
+
+  .body-accueil{
+    background-image: url(../images/bg-accueil2.webp);
+    background-size: cover;
+    background-repeat: round;
+    height: 100%;
+}
+
+  
