--- a/utils/style.css
+++ b/utils/style.css
@@ -44,3 +44,7 @@ body{
     white-space: normal;
     font-size: 16px; /* Reset font size for content */
 }
+.petitPhoto{
+    width: 5px;
+    height: 5px;
+}
